--- a/css/carousel.inmuebles.css
+++ b/css/carousel.inmuebles.css
@@ -15,8 +15,8 @@
     height: 100%;
 }
 .carousel-item img{
-    height: 0%;
-    object-fit: contain;
+    height: 100%;
+    object-fit: cover;
 }
 @media (min-width: 576px) {
     .carousel-inner{
