--- a/scss/_zblog.scss
+++ b/scss/_zblog.scss
@@ -7,9 +7,21 @@
     display: block;
     position: relative;
     margin-top: 20%;
-    @include media-breakpoint-up(md){
-        margin-top: 10%;
-    }
+    @media(max-width: 1140px){
+        margin-top: 0%;
+     }
+     @media(max-width: 1023px){
+        margin-top: 0%;
+     }
+     @media(max-width: 768px){
+         margin-top: 10%;
+     }
+     @media(max-width: 425px){
+        margin-top: 20%;
+     }
+     @media(max-width: 360px){
+        margin-top: 20%;
+     }
     @include media-breakpoint-up(lg){
         margin-top: 0%;
     }
