--- a/scss/_zquienes_somos.scss
+++ b/scss/_zquienes_somos.scss
@@ -6,13 +6,21 @@
     background-repeat: no-repeat;
     display: block;
     position: relative;
-    margin-top: 20%;
-    @include media-breakpoint-up(md){
-        margin-top: 10%;
-    }
-    @include media-breakpoint-up(lg){
+    @media(max-width: 1140px){
         margin-top: 0%;
-    }
+     }
+     @media(max-width: 1023px){
+        margin-top: 0%;
+     }
+     @media(max-width: 768px){
+         margin-top: 10%;
+     }
+     @media(max-width: 425px){
+        margin-top: 20%;
+     }
+     @media(max-width: 360px){
+        margin-top: 20%;
+     }
     .overlay{
         position: absolute;
         width: 100%;
